--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -270,13 +270,25 @@ html body[data-scroll-locked] {
 }
 
 /* Chore */
+.CollapsibleContent {
+  overflow: hidden;
+}
+
+.CollapsibleContent[data-state='open'] {
+  animation: slideDown 300ms ease-out;
+}
+
+.CollapsibleContent[data-state='closed'] {
+  animation: slideUp 300ms ease-out;
+}
+
 .fade-in {
   animation: fadeIn 0.3s ease-out;
   opacity: 1;
 }
 
 .slide-in-up {
-  animation: slideInUp 0.3s ease-out;
+  animation: fadeInUp 0.3s ease-out;
   opacity: 1;
   transform: translateY(0);
 }
@@ -291,7 +303,7 @@ html body[data-scroll-locked] {
   }
 }
 
-@keyframes slideInUp {
+@keyframes fadeInUp {
   from {
     opacity: 0;
     transform: translateY(20px);
@@ -300,5 +312,24 @@ html body[data-scroll-locked] {
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+@keyframes slideDown {
+  from {
+    height: 0;
+  }
+
+  to {
+    height: var(--radix-collapsible-content-height);
+  }
+}
+
+@keyframes slideUp {
+  from {
+    height: var(--radix-collapsible-content-height);
+  }
+
+  to {
+    height: 0;
   }
 }
