--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -219,7 +219,9 @@
   }
 
   * {
-    @apply border-border;
+    @apply border-border outline-ring/50;
+    scrollbar-width: thin;
+    scrollbar-color: var(--border) transparent;
   }
 
   html {
